salesforce-reference/force-app/main/default/objects/Long_Option_Bottom_Position__c/Long_Option_Bottom_Position__c.object-meta.xml
<CustomObject>
    <label>Long Option Bottom Position</label>
    <nameField>
        <label>Long Option Bottom Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Long Option Bottom Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>