salesforce-reference/force-app/main/default/objects/Long_Option_Bottom_Position__c/fields/Base_Position__c.field-meta.xml
<CustomField>
    <fullName>Base_Position__c</fullName>
    <label>Base Position</label>
    <referenceTo>Base_Position__c</referenceTo>
    <relationshipLabel>Long Option Bottom Positions</relationshipLabel>
    <relationshipName>Long_Option_Bottom_Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>