salesforce-reference/force-app/main/default/objects/Long_Option_Bottom_Position__c/fields/Long_Opt_Bottom_Position_Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Long_Opt_Bottom_Position_Ticker_Symbol__c</fullName>
    <formula>Base_Position__r.Ticker_Symbol__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Long Opt Bottom Position Ticker Symbol</label>
    <type>Text</type>
</CustomField>