salesforce-reference/force-app/main/default/objects/Long_Option_Bottom_Position__c/fields/Long_Option_Action__c.field-meta.xml
<CustomField>
    <fullName>Long_Option_Action__c</fullName>
    <label>Long Option Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy to Open</fullName>
            </value>
            <value>
                <fullName>Sell to Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>