salesforce-reference/force-app/main/default/objects/Long_Option_Bottom_Position__c/fields/Long_Option_Add_or_Subtract__c.field-meta.xml
<CustomField>
    <fullName>Long_Option_Add_or_Subtract__c</fullName>
    <formula>IF(ISPICKVAL(Long_Option_Action__c, &apos;Buy to Open&apos;), -1, 1)</formula>
    <label>Long Option Add or Subtract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>