salesforce-reference/force-app/main/default/objects/Long_Option_Bottom_Position__c/fields/Long_Option_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Long_Option_Expiration_Date__c</fullName>
    <label>Long Option Expiration Date</label>
    <type>Date</type>
</CustomField>