salesforce-reference/force-app/main/default/objects/Long_Option_Bottom_Position__c/fields/Long_Option_Number_of_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Long_Option_Number_of_Contracts__c</fullName>
    <label>Long Option Number of Contracts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>