salesforce-reference/force-app/main/default/objects/Long_Option_Bottom_Position__c/fields/Long_Option_Order_Fill_Price__c.field-meta.xml
<CustomField>
    <fullName>Long_Option_Order_Fill_Price__c</fullName>
    <label>Long Option Order Fill Price</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>