salesforce-reference/force-app/main/default/objects/Long_Option_Bottom_Position__c/fields/Long_Option_Order_Principal__c.field-meta.xml
<CustomField>
    <fullName>Long_Option_Order_Principal__c</fullName>
    <formula>Long_Option_Order_Fill_Price__c * 100 *  Long_Option_Number_of_Contracts__c *  Long_Option_Add_or_Subtract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Long Option Order Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>