salesforce-reference/force-app/main/default/objects/Long_Option_Bottom_Position__c/fields/Long_Option_Strike_Price__c.field-meta.xml
<CustomField>
    <fullName>Long_Option_Strike_Price__c</fullName>
    <label>Long Option Strike Price</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>